# Secure-File-Transfer

./: .gitignore  CLAUDE.MD  Cargo.toml  PROXY_TROUBLESHOOTING.md  README.md  crypto-accelerator-fixed.c  install.sh  python_wrapper_fixed.py  requirements.txt  secure-file-transfer-fixed.py  secure_file_transfer_fixed.py  sft.py  test_security_protocol.py
C/: README.md  crypto_accelerator.c  installer.sh  python_wrapper.py  requirements.txt  sft.py  system_requirements.txt
Docker/: .env.example  CHANGELOG.md  Dockerfile.rust  docker-compose.yml
Linux_and _other_distribution_(RUST)/: Cargo.toml  LICENSE  README.md  README_WINDOWS_INSTALLER.md  RUST_SECURITY_AUDIT_REPORT.md
Linux_and _other_distribution_(RUST)/installer/: README.md  build-installer-linux.sh  setup-build-env.sh
Linux_and _other_distribution_(RUST)/installer/assets/: README.txt
Linux_and _other_distribution_(RUST)/installer/docs/: post-install.txt  pre-install.txt
Linux_and _other_distribution_(RUST)/tests/: test_p0_security.py  test_p2_completeness.py  test_p2_unit_completeness.py  test_security_protocol.py  test_unit_sft.py
Linux_and _other_distribution_(RUST)/windows/: ARCHITECTURE_DIAGRAM.txt  EXECUTIVE_SUMMARY.md  INSTALLER_ARCHITECTURE_AND_IMPLEMENTATION_PLAN.md
Linux_and _other_distribution_(RUST)/windows/installer/: TEST_BUILD.md  build-installer.ps1  sft-setup.iss
RUST/: .dockerignore  Cargo.toml  Dockerfile  README.md  aliases.sh  docker-compose.yml  installer.sh  python_wrapper.py  requirements.txt  sft.py  system_requirements.txt
Windows/: .gitignore  README.md
src/: lib.rs
(+36 files in other folders)
