[package]
name = "crypto_accelerator"
version = "1.8.0"
edition = "2021"
authors = ["SFT Contributors"]

[lib]
name = "crypto_accelerator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
aes-gcm = "0.10"
sha2 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
hmac = "0.12"
getrandom = "0.2"
subtle = "2.5"
zeroize = { version = "1.7", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
