[package]
name = "crypto_accelerator"
version = "1.8.0"
edition = "2021"
authors = ["SFT Contributors"]

[lib]
name = "crypto_accelerator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
aes-gcm = "0.10.3"
sha2 = "0.10.9"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
pbkdf2 = { version = "0.12.2", features = ["simple"] }
hmac = "0.12.1"
getrandom = "0.2.15"
subtle = "2.6.1"
zeroize = { version = "1.8.1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
